feat: add alias mail settings API logic
